-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
Windows 7
-
618ea643cafa106ca6d833eccf4bf348171c8f89
Other widgets besides the QAxWidget do not repaint correctly. They do receive and respond to events, but do not paint.
One way to fix this is to specify Qt::WA_DontCreateNativeAncestors for all QAxWidgets, so that QAxWidget's ancestors won't get declared native. However, this was not necessary in Qt4, so the real problem probably lies elsewhere.
Needs further investigation.
- is required for
-
QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module
-
- Closed
-
- resulted in
-
QTBUG-50796 [Reg Qt4->Qt5]: Duplicate paint events on native widgets when resizing
-
- Closed
-
| For Gerrit Dashboard: QTBUG-25805 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 27254,2 | Fix some painting issues with native widgets | master | qt/qtbase | Status: MERGED | +2 | 0 |