src/widgets/kernel/qwidget.cpp
@@ -5116,6 +5116,10 @@ void QWidgetPrivate::drawWidget(QPaintDevice *pdev, const QRegion &rgn, const QP
             QPaintEvent e(toBePainted);
             QCoreApplication::sendSpontaneousEvent(q, &e);
 
+            // Native widgets need to be marked dirty on screen so painting will be done in correct context
+            if (backingStore && !onScreen && !asRoot && (q->internalWinId() || !q->nativeParentWidget()->isWindow()))
+                backingStore->markDirtyOnScreen(toBePainted, q, offset);
+
             //restore
             if (paintEngine) {
 #ifdef Q_WS_MAC
